test/errors/python_error/zs/generated_symbols/structure_invalid_property_name_reserved_error.zs
package generated_symbols.structure_invalid_property_name_reserved_error;

struct TestStructure
{
    uint32 __eq__; // starts with '_'
};
